# fuckcf

./: Cargo.toml  README.md
crates/cdp/: Cargo.toml
crates/cdp/src/: caps.rs  lib.rs  socket.rs
src/: main.rs
